<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">
    <!-- Above Forces focus on CoordinatorLayout -->

    <!-- Scrollable view here -->

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_collapsing_height">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleGravity="top"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="-50dp"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="1"
                app:srcCompat="@drawable/create_event_photo" />

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/viewContactsNested"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".CreateEventActivity">

            <ScrollView
                android:id="@+id/scrollView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:id="@+id/createEventFormLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/create_event_field_name_hint">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/fieldName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginRight="@dimen/create_event_time_margin"
                            android:layout_weight="0.8"
                            android:hint="@string/create_event_field_start_time_hint">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/fieldStartTime"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <Button
                            android:id="@+id/button8"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginRight="@dimen/create_event_time_margin"
                            android:layout_weight="1"
                            android:onClick="onPressStartTimePickDate"
                            android:text="@string/create_event_button_start_time_pick_date" />

                        <Button
                            android:id="@+id/button9"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:onClick="onPressStartTimePickTime"
                            android:text="@string/create_event_button_start_time_pick_time" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginRight="@dimen/create_event_time_margin"
                            android:layout_weight="0.8"
                            android:hint="@string/create_event_field_end_time_hint">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/fieldEndTime"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <Button
                            android:id="@+id/button11"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginRight="@dimen/create_event_time_margin"
                            android:layout_weight="1"
                            android:onClick="onPressEndTimePickDate"
                            android:text="@string/create_event_button_end_time_pick_date" />

                        <Button
                            android:id="@+id/button10"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:onClick="onPressEndTimePickTime"
                            android:text="@string/create_event_button_end_time_pick_time" />
                    </LinearLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/create_event_field_phone_number_hint">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/fieldPhoneNumber"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/create_event_field_email_hint">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/fieldMail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/create_event_field_description_hint">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/fieldDescription"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/buttonPaste"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="onPressPasteDescription"
                        android:text="@string/create_event_button_paste" />

                    <Button
                        android:id="@+id/button12"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="onPressDescriptionRecordWithMicrophone"
                        android:text="@string/create_event_button_description_record" />

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/create_event_field_home_page_hint">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/fieldHomepage"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/create_event_field_youtube_hint">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/fieldYoutube"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="60dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="0.8" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/createEventCreateButton"
                            style="@style/Widget.MaterialComponents.Button"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginRight="@dimen/create_event_time_margin"
                            android:layout_weight="0.9"
                            android:onClick="onPressCreateEvent"
                            android:text="@string/create_event_button_create" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/createEventResetButton"
                            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:onClick="onPressReset"
                            android:text="@string/create_event_button_reset" />
                    </LinearLayout>
                </LinearLayout>
            </ScrollView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>

